[gd_scene load_steps=22 format=2]

[ext_resource path="res://Cutscene/textbox.png" type="Texture" id=1]
[ext_resource path="res://Fonts/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ChapterListingFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Cutscene/CutsceneHistory.tscn" type="PackedScene" id=4]
[ext_resource path="res://Ext/skipbtn.png" type="Texture" id=5]
[ext_resource path="res://Ext/skipbtn_click.png" type="Texture" id=6]
[ext_resource path="res://Cutscene/ChoiceOverlay/ChoiceHandler.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cutscene/CutsceneMain.tres.gd" type="Script" id=8]
[ext_resource path="res://Cutscene/TN_Actor.gd" type="Script" id=9]
[ext_resource path="res://Cutscene/PortraitManager.gd" type="Script" id=10]
[ext_resource path="res://Cutscene/BackgroundManager.gd" type="Script" id=11]
[ext_resource path="res://Cutscene/CutsceneOptions.tscn" type="PackedScene" id=12]
[ext_resource path="res://stepmania-compat/smQuad.gd" type="Script" id=13]
[ext_resource path="res://Fonts/TextFont_Italic.tres" type="DynamicFont" id=14]
[ext_resource path="res://Cutscene/CutsceneDebugger.tscn" type="PackedScene" id=15]
[ext_resource path="res://Ext/arrow_small.png" type="Texture" id=16]
[ext_resource path="res://Fonts/NotoSansHans-DemiLight.otf" type="DynamicFontData" id=17]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="GDScript" id=2]
script/source = "extends Control

func play():
	$AnimationPlayer.play(\"New Anim\")
	self.visible=true

func stop():
	$AnimationPlayer.stop()
	self.visible=false
"

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect2:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect3:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}

[node name="CutscenePlayer" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="dim" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.701961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgFadeLayer" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backgrounds" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portraits" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -840.0
margin_bottom = -240.0
grow_vertical = 0
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Node" parent="."]

[node name="SoundEffects" type="Node" parent="."]

[node name="textbox" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 550 )
texture = ExtResource( 1 )

[node name="PopupContainer" type="ColorRect" parent="."]
visible = false
margin_left = 1076.0
margin_top = 425.0
margin_right = 1761.0
margin_bottom = 522.0
grow_vertical = 0
rect_pivot_offset = Vector2( 342, 48 )
mouse_filter = 2
color = Color( 0, 0.160784, 0.537255, 1 )
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="PopupContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]This is special popup textttttttttttttttsgsdg sg sfg sfgsfg sfg sfg fs sfg sfg sf sfg fsg s  fg tt[/center]"
text = "This is special popup textttttttttttttttsgsdg sg sfg sfgsfg sfg sfg fs sfg sfg sf sfg fsg s  fg tt"
scroll_active = false

[node name="CenterContainer" type="Control" parent="."]
anchor_right = 1.0125
anchor_bottom = 1.0
margin_top = 460.0
margin_right = -16.0
margin_bottom = -53.0
rect_min_size = Vector2( 876, 207 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -661.0
margin_top = -103.5
margin_right = 215.0
margin_bottom = 103.5
grow_vertical = 2
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 103 )
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textBackground" type="ColorRect" parent="CenterContainer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -63.5
margin_right = -0.00012207
margin_bottom = 283.5
rect_pivot_offset = Vector2( 0, 173 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
color = Color( 0.04, 0.08, 0.14, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeakerActor" type="Label" parent="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -854.385
margin_top = -148.447
margin_right = 21.6149
margin_bottom = 31.5533
rect_pivot_offset = Vector2( 0, 90 )
custom_fonts/font = ExtResource( 3 )
text = "Dandelion"
autowrap = true

[node name="textActor_better" type="RichTextLabel" parent="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -754.0
margin_top = -20.0
margin_right = 746.0
margin_bottom = 250.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/italics_font = ExtResource( 14 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "\"[color=#ff00ff]Lorem ipsum[/color] dolor sit amet, consectetur [i]adipiscing elit[/i], sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor  (If you can see this, the cutscene failed to load. File a bug report!)"

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 541.537, -60.5445 )

[node name="TextboxTween" type="Tween" parent="."]
pause_mode = 2
playback_process_mode = 0

[node name="HistoryTween" type="Tween" parent="."]

[node name="FSMode_ActorFrame" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="FSMode_ActorFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextActor" type="RichTextLabel" parent="FSMode_ActorFrame"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_constants/line_separation = 12
custom_constants/shadow_as_outline = 0
custom_fonts/normal_font = ExtResource( 2 )
text = "This is FSMode text"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" parent="." instance=ExtResource( 7 )]
visible = false

[node name="whiteFlash" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )

[node name="SkipButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -356.0
margin_top = 20.0
margin_right = -178.0
margin_bottom = 67.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="historyQuad" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CutsceneHistory" parent="." instance=ExtResource( 4 )]
margin_left = -1920.0
margin_right = -1920.0

[node name="CutsceneDebug" parent="." instance=ExtResource( 15 )]
visible = false

[node name="TN_Actor" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TN_Actor"]
anchor_right = 1.0
margin_bottom = 288.0
color = Color( 0, 0, 0, 0.792157 )

[node name="TranslationNote" type="Label" parent="TN_Actor/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -634.5
margin_top = 40.0
margin_right = 637.5
margin_bottom = 280.0
size_flags_horizontal = 0
size_flags_vertical = 10
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 2 )
text = "This is a translation note placeholder, you shouldn't be able to see this unless the cutscene failed to load.... Hello world! Lorem Ipsum whatever asoidjaosdijaodija oawoij aowjidoaijdao jdiaowij jaowij odjiowijd oaijwd"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="TN_Actor"]
margin_left = 9.0
margin_top = 9.0
margin_right = 172.0
margin_bottom = 125.0
focus_mode = 1
mouse_default_cursor_shape = 2
input_pass_on_modal_close_click = false
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 1 )
action_mode = 0
text = "TN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsScreen" parent="." instance=ExtResource( 12 )]
visible = false
rect_pivot_offset = Vector2( -1839.45, 653.5 )

[node name="FadeToBlack" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AutoModeIndicator" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.659
margin_top = 3.93091
margin_right = -87.6589
margin_bottom = 43.9309
script = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="AutoModeIndicator"]
margin_right = 128.0
margin_bottom = 128.0
rect_rotation = -90.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="TextureRect2" type="TextureRect" parent="AutoModeIndicator"]
margin_left = 32.0
margin_right = 160.0
margin_bottom = 128.0
rect_rotation = -90.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="TextureRect3" type="TextureRect" parent="AutoModeIndicator"]
modulate = Color( 1, 1, 1, 0.977477 )
margin_left = 64.0
margin_right = 192.0
margin_bottom = 128.0
rect_rotation = -90.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="AutoModeIndicator"]
margin_left = -240.0
margin_top = -64.0
margin_right = 9.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
text = "Auto"
align = 2
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AutoModeIndicator"]
"anims/New Anim" = SubResource( 4 )

[connection signal="gui_input" from="dim" to="." method="_on_dim_gui_input"]
[connection signal="gui_input" from="FSMode_ActorFrame" to="." method="_on_dim_gui_input"]
[connection signal="selected_choice" from="Choices" to="." method="_on_Choices_selected_choice"]
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="mouse_entered" from="TN_Actor/Button" to="TN_Actor" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="TN_Actor/Button" to="TN_Actor" method="_on_Button_mouse_exited"]
